# virusq

./: .gitignore  Dockerfile  README.md  alembic.ini  config.example.toml  docker-compose.yml  pgbouncer.ini  pyproject.toml  run.sh
.github/workflows/: deploy.yml
app/: __main__.py  config.py  setup.py
app/cron/: account.py  game.py
app/database/: mixins.py
app/exceptions/: auth.py  base.py  bonus_tasks.py  daily_reward.py  database.py  game.py
app/handlers/: routes.py
app/schemas/: base.py
app/typings/: consts.py  enums.py  literals.py
app/utils/: auth.py  dt.py  logs.py  ranking.py
migrations/: env.py
migrations/versions/: 2024_06_11_1939-8b8964c097d4_initial.py  2024_06_12_1725-d31db75bfe82_created_role_field_in_users.py  2024_06_12_1905-86e1772893bb_created_m2m_tables.py  2024_06_12_1939-a130b240c77b_changed_fk_in_daily_rewards_completition.py  2024_06_13_1744-90b6fc08d1b6_added_game_energy_column_to_users.py  2024_06_17_1248-d5b49f4ce297_removed_role_column_added_new_columns_.py  2024_06_17_1811-d520163d0219_changed_collected_at_nullability_to_.py  2024_06_18_1340-21523b62e24e_added_photo_column_to_bonus_tasks.py  2024_06_19_1723-6cbb921b792a_added_description_field_to_bonus_tasks.py  2024_06_19_1733-39c33c143630_changed_check_access_data_field_to_.py  2024_06_19_1857-c8857b073c48_removed_nullability_from_bonus_task_id_.py  2024_06_19_1922-5e3e8b837dde_changed_reward_field_to_reward_amount_.py  2024_06_19_2157-e11cc1f1bcc4_changed_sponsor_type_field_to_task_type_.py  2024_06_24_1844-96dec446ddc0_changed_fields_in_users_table.py  (+11 more)
(+43 files in other folders)
